force-app/main/default/objects/Lead/fields/lead_guid__c.field-meta.xml
<CustomField>
    <fullName>lead_guid__c</fullName>
    <externalId>true</externalId>
    <label>lead_guid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>