force-app/main/default/objects/Lead/fields/lead_id__c.field-meta.xml
<CustomField>
    <fullName>lead_id__c</fullName>
    <externalId>true</externalId>
    <label>lead_id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>