force-app/main/default/objects/Lead/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cc_refinance</fullName>
            </value>
            <value>
                <fullName>debt_consolidation</fullName>
            </value>
            <value>
                <fullName>home_improvement</fullName>
            </value>
            <value>
                <fullName>major_purchase</fullName>
            </value>
            <value>
                <fullName>unexpected_cost</fullName>
            </value>
            <value>
                <fullName>relocation</fullName>
            </value>
            <value>
                <fullName>special_occasion</fullName>
            </value>
            <value>
                <fullName>wedding</fullName>
            </value>
            <value>
                <fullName>household_expenses</fullName>
            </value>
            <value>
                <fullName>medical_expenses</fullName>
            </value>
            <value>
                <fullName>vacation</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>