force-app/main/default/objects/Lead/fields/member_id__c.field-meta.xml
<CustomField>
    <fullName>member_id__c</fullName>
    <externalId>true</externalId>
    <label>member_id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>