force-app/main/default/objects/Lead/fields/Member_Matching_Deactivation_Response__c.field-meta.xml
<CustomField>
    <fullName>Member_Matching_Deactivation_Response__c</fullName>
    <description>Spits out a response from Member Matching Deactivation API</description>
    <inlineHelpText>Response from Member Matching Deactivation API</inlineHelpText>
    <label>Member Matching Deactivation Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>