force-app/main/default/objects/Lead/fields/utm_offerCode__c.field-meta.xml
<CustomField>
    <fullName>utm_offerCode__c</fullName>
    <label>utm offerCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>