force-app/main/default/objects/Lead/listViews/Fraud_Cleared_Leads.listView-meta.xml
<ListView>
    <fullName>Fraud_Cleared_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Fraud Cleared</value>
    </filters>
    <label>Fraud Cleared Leads</label>
</ListView>