force-app/main/default/objects/Lead/listViews/Fraud_Device_Leads.listView-meta.xml
<ListView>
    <fullName>Fraud_Device_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Fraud_Status__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fraud_Status__c</field>
        <operation>equals</operation>
        <value>Fraud Device</value>
    </filters>
    <label>Fraud Device Leads</label>
</ListView>